--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "config": "^3.3.12",
+    "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
