--- a/package.json
+++ b/package.json
@@ -30,8 +30,20 @@
     "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
     "@vueform/multiselect": "^2.6.10",
-    "@vueuse/core": "^11.1.0",
-    "argon2": "^0.41.1",
+    "@firebase/app-types": "^0.9.2",
+    "@internationalized/date": "^3.5.6",
+    "@internationalized/number": "^3.5.4",
+    "@morev/vue-transitions": "^3.0.2",
+    "@noble/ciphers": "^1.0.0",
+    "@noble/hashes": "^1.5.0",
+    "@tanstack/vue-table": "^8.20.5",
+    "@unovis/ts": "^1.4.4",
+    "@unovis/vue": "^1.4.4",
+    "@vee-validate/nuxt": "^4.14.3",
+    "@vee-validate/yup": "^4.14.3",
+    "@vue-email/components": "^0.0.19",
+    "@vue-email/render": "^0.0.9",
+    "@vueform/multiselect": "^2.6.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "datatables.net-buttons-dt": "^3.1.2",
@@ -49,6 +61,10 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
+    "libsodium": "^0.7.15",
+    "libsodium-wrappers": "^0.7.15",
+    "log4js": "^6.9.1",
+    "logging": "^3.3.0",
     "lucide-vue-next": "^0.452.0",
     "nodemailer": "^6.9.15",
     "nuxt": "^3.13.2",
@@ -65,11 +81,13 @@
     "ts-node": "^10.9.2",
     "ui-thing": "^0.0.5",
     "vaul-vue": "^0.2.0",
-    "vue": "^3.5.12",
+    "vue": "latest",
     "vue-currency-input": "^3.1.0",
-    "vue-router": "^4.4.5",
+    "vue-router": "latest",
     "vue-sonner": "^1.2.2",
-    "vuefire": "^3.2.0"
+    "vuefire": "^3.2.0",
+    "winston": "^3.15.0",
+    "winston-transport-browserconsole": "^1.0.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
@@ -89,12 +107,15 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/argon2": "^0.14.1",
+    "@types/config": "^3.3.5",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/libsodium-wrappers": "^0.7.14",
     "@types/node": "^22.7.7",
     "@types/nodemailer": "^6.4.16",
     "@types/vue-router": "^2.0.0",
+    "@types/winston": "^2.4.4",
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
     "cypress": "^13.15.0",
