--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "firebase-functions": "^5.1.1",
     "firebase-storage": "^1.1.4",
     "hash-wasm": "^4.11.0",
-    "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -71,9 +70,7 @@
     "vue-sonner": "^1.2.2",
     "vuefire": "^3.2.0",
     "winston": "^3.15.0",
-    "winston-transport-browserconsole": "^1.0.5",
-    "vue-router": "^4.4.5",
-    "winston": "^3.15.0"
+    "winston-transport-browserconsole": "^1.0.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
