--- a/package.json
+++ b/package.json
@@ -33,6 +33,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "config": "^3.3.12",
+    "datatables.net-buttons-dt": "^3.1.2",
+    "datatables.net-responsive-dt": "^3.0.3",
+    "datatables.net-searchbuilder-dt": "^1.8.1",
+    "datatables.net-select-dt": "^2.1.0",
+    "datatables.net-vue3": "^3.0.2",
+    "docx": "^9.0.2",
+    "dotenv": "^16.4.5",
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^5.1.1",
+    "firebase-storage": "^1.1.4",
+    "hash-wasm": "^4.11.0",
     "firebase": "^10.14.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -63,9 +74,7 @@
     "vue-sonner": "^1.2.2",
     "vuefire": "^3.2.0",
     "winston": "^3.15.0",
-    "winston-transport-browserconsole": "^1.0.5",
-    "vue-router": "^4.4.5",
-    "winston": "^3.15.0"
+    "winston-transport-browserconsole": "^1.0.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
