--- a/package.json
+++ b/package.json
@@ -87,9 +87,7 @@
     "vue-sonner": "^1.2.2",
     "vuefire": "^3.2.0",
     "winston": "^3.15.0",
-    "winston-transport-browserconsole": "^1.0.5",
-    "vue-router": "^4.4.5",
-    "winston": "^3.15.0"
+    "winston-transport-browserconsole": "^1.0.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
