--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@vueform/multiselect": "^2.6.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "config": "^3.3.12",
     "datatables.net-buttons-dt": "^3.1.2",
     "datatables.net-responsive-dt": "^3.0.3",
     "datatables.net-searchbuilder-dt": "^1.8.1",
@@ -40,18 +39,14 @@
     "datatables.net-vue3": "^3.0.2",
     "docx": "^9.0.2",
     "dotenv": "^16.4.5",
+    "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^5.1.1",
     "firebase-storage": "^1.1.4",
     "hash-wasm": "^4.11.0",
-    "firebase": "^10.14.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
-    "libsodium": "^0.7.15",
-    "libsodium-wrappers": "^0.7.15",
-    "log4js": "^6.9.1",
-    "logging": "^3.3.0",
     "lucide-vue-next": "^0.452.0",
     "nodemailer": "^6.9.15",
     "nuxt": "^3.13.2",
@@ -72,9 +67,7 @@
     "vue-currency-input": "^3.1.0",
     "vue-router": "^4.4.5",
     "vue-sonner": "^1.2.2",
-    "vuefire": "^3.2.0",
-    "winston": "^3.15.0",
-    "winston-transport-browserconsole": "^1.0.5"
+    "vuefire": "^3.2.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
@@ -94,15 +87,12 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/argon2": "^0.14.1",
-    "@types/config": "^3.3.5",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/libsodium-wrappers": "^0.7.14",
     "@types/node": "^22.7.7",
     "@types/nodemailer": "^6.4.16",
     "@types/vue-router": "^2.0.0",
-    "@types/winston": "^2.4.4",
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
     "cypress": "^13.15.0",
