--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@iconify/vue": "^4.1.3-beta.1",
     "@nuxt/devtools": "^1.6.0",
     "@nuxt/icon": "^1.5.6",
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
@@ -96,6 +97,7 @@
     "eslint-plugin-anti-trojan-source": "^1.1.1",
     "eslint-plugin-security-node": "^1.1.4",
     "nodemailer": "^6.9.15",
+    "nuxt-file-storage": "^0.2.8",
     "nuxt-nodemailer": "^1.1.2",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
