I'm not sure of this push

--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@tanstack/vue-table": "^8.20.5",
     "@unovis/ts": "^1.4.4",
     "@unovis/vue": "^1.4.4",
-    "@vee-validate/nuxt": "^4.14.3",
-    "@vee-validate/yup": "^4.14.3",
+    "@vee-validate/nuxt": "^4.14.5",
+    "@vee-validate/yup": "^4.14.5",
     "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
+    "@vue/runtime-core": "^3.5.12",
     "@vueform/multiselect": "^2.6.10",
+    "@vueuse/core": "^11.1.0",
+    "argon2": "^0.41.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "datatables.net-buttons-dt": "^3.1.2",
@@ -50,9 +53,9 @@
     "lucide-vue-next": "^0.452.0",
     "nodemailer": "^6.9.15",
     "nuxt": "^3.13.2",
-    "pdfmake": "^0.2.14",
     "nuxt-mail": "^5.1.1",
     "nuxt-vuefire": "^1.0.4",
+    "pdfmake": "^0.2.14",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
     "radix-vue": "^1.9.7",
