Continued library implementation

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "demo": "tsc -t es2022 -m es2022 --moduleResolution node sandbox/main.ts | node sandbox/main.js",
+    "build-demo": "tsc -t es2022 -m es2022 --moduleResolution node sandbox/main.ts",
+    "run-demo": "node sandbox/main.js",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -51,6 +52,7 @@
     "nuxt-vuefire": "^1.0.4",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
+    "pure-rand": "^6.1.0",
     "radix-vue": "^1.9.7",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.5.3",
@@ -58,6 +60,8 @@
     "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.2",
     "ui-thing": "^0.0.5",
+    "uuid": "^11.0.2",
+    "validator": "^13.12.0",
     "vaul-vue": "^0.2.0",
     "vue": "latest",
     "vue-currency-input": "^3.1.0",
@@ -89,6 +93,7 @@
     "@types/libsodium-wrappers": "^0.7.14",
     "@types/node": "^22.7.7",
     "@types/nodemailer": "^6.4.16",
+    "@types/validator": "^13.12.2",
     "@types/vue-router": "^2.0.0",
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
