--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "datatables.net-vue3": "^3.0.2",
     "docx": "^9.0.2",
     "dotenv": "^16.4.5",
+    "emailjs": "^4.0.3",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^5.1.1",
