--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "nuxt-mail": "^5.1.1",
     "nuxt-vuefire": "^1.0.4",
     "pdfmake": "^0.2.14",
+    "pinia": "^2.2.5",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
     "pure-rand": "^6.1.0",
@@ -86,7 +87,7 @@
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@pinia/nuxt": "^0.5.5",
+    "@pinia/nuxt": "^0.6.1",
     "@samk-dev/nuxt-vcalendar": "^1.0.4",
     "@softvisio/argon2": "^1.6.11",
     "@tailwindcss/aspect-ratio": "^0.4.2",
