--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lucide-vue-next": "^0.452.0",
     "nodemailer": "^6.9.15",
     "nuxt": "^3.13.2",
