--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "firebase-storage": "^1.1.4",
     "hash-wasm": "^4.11.0",
     "helmet": "^8.0.0",
+    "html2pdf.js": "^0.10.2",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
@@ -59,6 +60,7 @@
     "pinia": "^2.2.5",
     "postcss": "^8.4.47",
     "primeicons": "^7.0.0",
+    "puppeteer": "^23.8.0",
     "pure-rand": "^6.1.0",
     "radix-vue": "^1.9.7",
     "shadcn-nuxt": "^0.10.4",
