--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue-email/render": "^0.0.9",
     "@vue/runtime-core": "^3.5.12",
     "@vueform/multiselect": "^2.6.10",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "datatables.net-buttons-dt": "^3.1.2",
