--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@firebase/app-types": "^0.9.2",
+    "@headlessui/vue": "^1.7.23",
     "@internationalized/date": "^3.5.6",
     "@internationalized/number": "^3.5.4",
     "@morev/vue-transitions": "^3.0.2",
