--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@firebase/app-types": "^0.9.2",
     "@headlessui/vue": "^1.7.23",
     "@internationalized/date": "^3.5.6",
     "@internationalized/number": "^3.5.4",
     "@morev/vue-transitions": "^3.0.2",
     "@noble/ciphers": "^1.0.0",
     "@noble/hashes": "^1.5.0",
+    "@supabase/supabase-js": "^2.48.0",
     "@tanstack/vue-table": "^8.20.5",
     "@unovis/ts": "^1.4.4",
     "@unovis/vue": "^1.4.4",
@@ -43,10 +43,6 @@
     "docx": "^9.0.2",
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
-    "firebase": "^10.14.1",
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^5.1.1",
-    "firebase-storage": "^1.1.4",
     "hash-wasm": "^4.11.0",
     "helmet": "^8.0.0",
     "html2pdf.js": "^0.10.2",
@@ -57,7 +53,6 @@
     "nodemailer": "^6.9.15",
     "nuxt": "^3.13.2",
     "nuxt-mail": "^5.1.1",
-    "nuxt-vuefire": "^1.0.4",
     "pdfmake": "^0.2.14",
     "pinia": "^2.2.5",
     "postcss": "^8.4.47",
@@ -78,7 +73,6 @@
     "vue-currency-input": "^3.1.0",
     "vue-router": "latest",
     "vue-sonner": "^1.2.2",
-    "vuefire": "^3.2.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
