--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@nuxt/devtools": "^2.0.0-beta.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
+    "@nuxt/test-utils": "^3.15.4",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
@@ -97,12 +98,15 @@
     "@types/vue": "^1.0.31",
     "@types/vue-router": "^2.0.0",
     "@vue/compiler-sfc": "^3.5.13",
+    "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^12.5.0",
     "@vueuse/nuxt": "^12.5.0",
     "cypress": "^14.0.0",
     "dotenv": "^16.4.7",
     "eslint-plugin-anti-trojan-source": "^1.1.1",
     "eslint-plugin-security-node": "^1.1.4",
+    "happy-dom": "^16.7.2",
+    "playwright-core": "^1.50.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss-animate": "^1.0.7",
