Initial REST API setup

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@internationalized/date": "^3.7.0",
     "@internationalized/number": "^3.6.0",
     "@morev/vue-transitions": "^3.0.5",
+    "@nuxtjs/supabase": "^1.4.6",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/vue-table": "^8.20.5",
     "@unovis/ts": "^1.5.0",
@@ -39,6 +40,7 @@
     "docx": "^9.1.1",
     "emailjs": "^4.0.3",
     "embla-carousel-vue": "^8.5.2",
+    "h3": "^1.14.0",
     "helmet": "^8.0.0",
     "html2pdf.js": "^0.10.2",
     "jsonwebtoken": "^9.0.2",
@@ -61,7 +63,7 @@
     "uuid": "^11.0.5",
     "v-calendar": "^3.1.2",
     "validator": "^13.12.0",
-    "vaul-vue": "^0.2.0",
+    "vaul-vue": "^0.2.1",
     "vee-validate": "^4.15.0",
     "vue": "latest",
     "vue-currency-input": "^3.2.1",
